--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <link rel="stylesheet" href="css/style.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/all.min.css" type="text/css"/>
 </head>
 <body>
 <div class="container">
@@ -31,10 +32,11 @@
             <p class="fixed__callback">Перезвоним<br> за 24 секунды</p>
         </div>
     </div>
-    <header class="header">
+    <div class="fullpage">
+    <header class="header section">
         <div class="header__wrap wrap">
             <h1 class="header__title">Ремонт квартир в г. Белая Церковь</h1>
-            <h2 class="header__subtitle">от 1800 грн/м сроком от 10 дней с гарантией 1 год</h2>
+            <h2 class="header__subtitle">от 65 $/м сроком от 10 дней с гарантией 1 год</h2>
             <div class="header__buttons">
                 <a class="header__work" href="#">Смотреть работы</a>
                 <p class="header__lider"><span>Лидер рынка</span> <span>2019</span></p>
@@ -60,7 +62,212 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header>    
+    <section class="projects section">
+        <div class="projects__wrap wrap">
+            <div class="projects__slides slide">
+                <h2 class="projects__title">с 2012 года успешно сдали более 300 объектов</h2>
+                <p class="projects__example">Вот несколько примеров</p>
+                <div class="projects__gallery">
+                    <div class="projects__big">
+                        <img src="img/gallery-big.jpg" alt="">
+                    </div>
+                    <div class="projects__mini">
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini1.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini2.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini3.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini4.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__information">
+                    <div class="projects__it-was">
+                        <p>Что было:</p>
+                        <p>Квартира со стандартной планировкой и черновой отделкой.</p>
+                    </div>
+                    <div class="projects__task">
+                        <p>Задача:</p>
+                        <ul>
+                            <li>Дистанционно разработать дизайн-проект с полследующей реализацией.</li>
+                            <li>Подобрать все необходимые материалы и предметы интерьера.</li>
+                            <li>Заказчик сразу пожелал сделать новые перегородки из газобетона.</li>
+                        </ul>
+                    </div>
+                    <div class="projects__result">
+                        <p>Результат:</p>
+                        <p>Произвели полный демонтаж стен и поставили прегородки. За счет препланировки квартиры освободили много полезного пространства. Квартира получилась светлая и уютная. Поменяли всю электрику под дизайн-проект.</p>
+                    </div>
+                </div>
+                <div class="projects__object">
+                    <div class="projects__item">
+                        <p>Объект: <span>3-х комнатная квартира</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Площадь: <span>81 м2</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Жилой комплекс: <span>Гранд фамилия</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Вид ремонта: <span>Премиум</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Срок выполнения: <span>6 месяцев</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Стоимость: <span>21 600 $</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="projects__slides slide">
+                <h2 class="projects__title">с 2012 года успешно сдали более 300 объектов</h2>
+                <p class="projects__example">Вот несколько примеров</p>
+                <div class="projects__gallery">
+                    <div class="projects__big">
+                        <img src="img/gallery-big.jpg" alt="">
+                    </div>
+                    <div class="projects__mini">
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini1.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini2.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini3.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini4.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__information">
+                    <div class="projects__it-was">
+                        <p>Что было:</p>
+                        <p>Квартира со стандартной планировкой и черновой отделкой.</p>
+                    </div>
+                    <div class="projects__task">
+                        <p>Задача:</p>
+                        <ul>
+                            <li>Дистанционно разработать дизайн-проект с полследующей реализацией.</li>
+                            <li>Подобрать все необходимые материалы и предметы интерьера.</li>
+                            <li>Заказчик сразу пожелал сделать новые перегородки из газобетона.</li>
+                        </ul>
+                    </div>
+                    <div class="projects__result">
+                        <p>Результат:</p>
+                        <p>Произвели полный демонтаж стен и поставили прегородки. За счет препланировки квартиры освободили много полезного пространства. Квартира получилась светлая и уютная. Поменяли всю электрику под дизайн-проект.</p>
+                    </div>
+                </div>
+                <div class="projects__object">
+                    <div class="projects__item">
+                        <p>Объект: <span>3-х комнатная квартира</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Площадь: <span>81 м2</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Жилой комплекс: <span>Гранд фамилия</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Вид ремонта: <span>Премиум</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Срок выполнения: <span>6 месяцев</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Стоимость: <span>21 600 $</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="projects__slides slide">
+                <h2 class="projects__title">с 2012 года успешно сдали более 300 объектов</h2>
+                <p class="projects__example">Вот несколько примеров</p>
+                <div class="projects__gallery">
+                    <div class="projects__big">
+                        <img src="img/gallery-big.jpg" alt="">
+                    </div>
+                    <div class="projects__mini">
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini1.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini2.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini3.jpg" alt="">
+                        </a>
+                        <a aria-label="Первое фото" data-src="img/gallery-big.jpg" href="#">
+                            <img src="img/gallery-mini4.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__information">
+                    <div class="projects__it-was">
+                        <p>Что было:</p>
+                        <p>Квартира со стандартной планировкой и черновой отделкой.</p>
+                    </div>
+                    <div class="projects__task">
+                        <p>Задача:</p>
+                        <ul>
+                            <li>Дистанционно разработать дизайн-проект с полследующей реализацией.</li>
+                            <li>Подобрать все необходимые материалы и предметы интерьера.</li>
+                            <li>Заказчик сразу пожелал сделать новые перегородки из газобетона.</li>
+                        </ul>
+                    </div>
+                    <div class="projects__result">
+                        <p>Результат:</p>
+                        <p>Произвели полный демонтаж стен и поставили прегородки. За счет препланировки квартиры освободили много полезного пространства. Квартира получилась светлая и уютная. Поменяли всю электрику под дизайн-проект.</p>
+                    </div>
+                </div>
+                <div class="projects__object">
+                    <div class="projects__item">
+                        <p>Объект: <span>3-х комнатная квартира</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Площадь: <span>81 м2</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Жилой комплекс: <span>Гранд фамилия</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Вид ремонта: <span>Премиум</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Срок выполнения: <span>6 месяцев</span></p>
+                    </div>
+                    <div class="projects__item">
+                        <p>Стоимость: <span>21 600 $</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="projects__counts">
+                <span class="projects__first">1</span>
+                /
+                <span class="projects__last">520</span>
+            </div>
+        </div>
+    </section>
+    <section class="details section">
+        <div class="details__wrap wrap">
+            <h2 class="details__title">При ремонте помещений учитываем все детали</h2>
+            <p class="details__text">Качество ремонта соотвествует ожиданиям клиента. Потому что для своих ремонтов мы используем исключительно качественные материалы партнеров.</p>
+            <ul class="details__list">
+                <li class="details__item"><span>Красим любые поверхности равномерно</span></li>
+                <li class="details__item"><span>Красим любые поверхности равномерно</span></li>
+                <li class="details__item"><span>Красим любые поверхности равномерно</span></li>
+                <li class="details__item"><span>Красим любые поверхности равномерно</span></li>
+            </ul>
+        </div>
+    </section>
+  </div>
 </div>
 <script src="js/all.min.js"></script>
 </body>
